--- a/package.json
+++ b/package.json
@@ -20,12 +20,11 @@
         "@google/generative-ai": "0.21.0",
         "@octokit/rest": "^22.0.0",
         "@vitalets/google-translate-api": "^9.2.1",
-        "@whiskeysockets/baileys": "latest",
+        "@whiskeysockets/baileys": "npm:baileys-mod",
         "api-dylux": "latest",
         "async-g-i-s": "^1.5.5",
         "axios": "^1.11.0",
         "caliph-api": "^1.0.1",
-        "canvas": "3.1.0",
         "cheerio": "^1.0.0",
         "compile-run": "^2.3.4",
         "denethdev-ytmp3": "latest",
@@ -40,7 +39,7 @@
         "google-translate-api-x": "^10.7.2",
         "googleapis": "^156.0.0",
         "javascript-obfuscator": "^4.1.1",
-        "jimp": "^1.6.0",
+        "jimp": "^0.16.1",
         "link-preview-js": "^3.1.0",
         "mathjs": "^14.3.1",
         "megajs": "1.3.5",
@@ -62,8 +61,8 @@
         "ruhend-scraper": "^9.0.1",
         "seedr": "latest",
         "sequelize": "6.37.4",
-        "sharp": "^0.32.6",
-        "sqlite3": "^5.1.7",
+        "sharp": "^0.34.1",
+        "stream": "^0.0.3",
         "systeminformation": "^5.21.11",
         "tempmail.lol": "^4.4.0",
         "tinyurl": "^1.1.7",
