--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "@google/generative-ai": "0.21.0",
         "@octokit/rest": "^22.0.0",
         "@vitalets/google-translate-api": "^9.2.1",
-        "@whiskeysockets/baileys": "github:whiskeysockets/baileys",
+        "@whiskeysockets/baileys": "npm:wileys",
         "api-dylux": "latest",
         "async-g-i-s": "^1.5.5",
         "axios": "^1.11.0",
@@ -39,7 +39,7 @@
         "google-translate-api-x": "^10.7.2",
         "googleapis": "^156.0.0",
         "javascript-obfuscator": "^4.1.1",
-        "jimp": "^1.6.0",
+        "jimp": "^0.16.1",
         "link-preview-js": "^3.1.0",
         "mathjs": "^14.3.1",
         "megajs": "1.3.5",
