--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
         "@google/generative-ai": "0.21.0",
         "@octokit/rest": "^22.0.0",
         "@vitalets/google-translate-api": "^9.2.1",
-        "@whiskeysockets/baileys": "npm:wileys",
+        "@whiskeysockets/baileys": "latest",
         "api-dylux": "latest",
         "async-g-i-s": "^1.5.5",
         "axios": "^1.11.0",
+        "buffer": "^6.0.3",
         "caliph-api": "^1.0.1",
         "cheerio": "^1.0.0",
         "compile-run": "^2.3.4",
@@ -38,8 +39,10 @@
         "gemini-ai": "latest",
         "google-translate-api-x": "^10.7.2",
         "googleapis": "^156.0.0",
-        "javascript-obfuscator": "^4.1.1",
-        "jimp": "^0.16.1",
+        "got": "^14.6.1",
+        "http": "^0.0.1-security",
+        "https": "^1.0.0",
+        "jimp": "^1.6.0",
         "link-preview-js": "^3.1.0",
         "mathjs": "^14.3.1",
         "megajs": "1.3.5",
