--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "@google/generative-ai": "0.21.0",
         "@octokit/rest": "^22.0.0",
         "@vitalets/google-translate-api": "^9.2.1",
-        "@whiskeysockets/baileys": "latest",
+        "@whiskeysockets/baileys": "^7.0.0-rc.6",
         "api-dylux": "latest",
         "async-g-i-s": "^1.5.5",
         "axios": "^1.11.0",
@@ -42,6 +42,7 @@
         "got": "^14.6.1",
         "http": "^0.0.1-security",
         "https": "^1.0.0",
+        "javascript-obfuscator": "^4.1.1",
         "jimp": "^1.6.0",
         "link-preview-js": "^3.1.0",
         "mathjs": "^14.3.1",
