--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "@google/generative-ai": "0.21.0",
         "@octokit/rest": "^22.0.0",
         "@vitalets/google-translate-api": "^9.2.1",
-        "@whiskeysockets/baileys": "latest",
+        "@whiskeysockets/baileys": "6.7.21",
         "api-dylux": "latest",
         "async-g-i-s": "^1.5.5",
         "axios": "^1.11.0",
@@ -44,7 +44,7 @@
         "https": "^1.0.0",
         "javascript-obfuscator": "^4.1.1",
         "jimp": "^1.6.0",
-        "link-preview-js": "^3.1.0",
+        "link-preview-js": "^3.0.0",
         "mathjs": "^14.3.1",
         "megajs": "1.3.5",
         "mime-types": "^2.1.35",
