--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
         "@dark-yasiya/nexara": "1.0.0",
         "@dark-yasiya/scrap": "^1.0.1",
         "@dark-yasiya/yt-dl.js": "latest",
+        "@google/genai": "latest",
         "@google/generative-ai": "0.21.0",
         "@octokit/rest": "^22.0.0",
         "@vitalets/google-translate-api": "^9.2.1",
-        "@whiskeysockets/baileys": "npm:node-cexche",
+        "@whiskeysockets/baileys": "6.7.19",
         "api-dylux": "latest",
         "async-g-i-s": "^1.5.5",
         "axios": "^1.11.0",
@@ -43,7 +44,7 @@
         "http": "^0.0.1-security",
         "https": "^1.0.0",
         "javascript-obfuscator": "^4.1.1",
-        "jimp": "^0.16.1",
+        "jimp": "^1.6.0",
         "link-preview-js": "^3.0.0",
         "mathjs": "^14.3.1",
         "megajs": "1.3.5",
